Fixed #24968 -- Removed bad horizontal scrollbar appearing on admin changelist page.
Appeared in Opera with ModelAdmin.actions=None.

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -74,6 +74,10 @@
     border-right: 1px solid #ddd;
 }
 
+#changelist table tbody th:first-child:last-child {
+    border-right: 0;
+}
+
 #changelist table tbody td.action-checkbox {
     text-align:center;
 }
